--- a/cpubottlenecks/index.html
+++ b/cpubottlenecks/index.html
@@ -236,7 +236,7 @@ If you do not use the smp_affinity flag, you will not have to worry about this.<
 <br>[root@server ~]# uptime
 <br>
 </span></h5>
-<h5><span class="w3-code w3-black">Now try above tuning option to reduce some load.</span></h5>
+<h5><span class="w3-code w3-red">Now try above tuning option to reduce some load.</span></h5>
 
 
 <!-- Contact/Area Container -->
