--- a/cpubottlenecks/index.html
+++ b/cpubottlenecks/index.html
@@ -236,7 +236,11 @@ If you do not use the smp_affinity flag, you will not have to worry about this.<
 <br>[root@server ~]# uptime
 <br>
 </span></h5>
+  <br>
 <h5><span class="w3-code w3-red">Now try above tuning option to reduce some load.</span></h5>
+  
+<h5><span class="w3-code w3-red">AGAIN, DO NOT TRY ANY TUNING OPTIONS IN PRODUCTION UNTILL YOU ARE FULL AWARE.</span></h5>  
+  
 
 
 <!-- Contact/Area Container -->
