--- a/cpubottlenecks/index.html
+++ b/cpubottlenecks/index.html
@@ -223,7 +223,7 @@ If you do not use the smp_affinity flag, you will not have to worry about this.<
 <br>[root@server ~]#  yum install epel-release
 <br>[root@server ~]# yum install stress</span></h5>
 <br>
-<br># To check options on how to use
+<br># To check in details on how to use this tool.
 <h5><span class="w3-code w3-black">[root@server ~]# stress --help</span></h5>
 
 <p><b>Lets Try:--<b><p>
