--- a/memorybottlenecks/index.html
+++ b/memorybottlenecks/index.html
@@ -125,9 +125,9 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-    <a href="https://linuxhero.tk/#Topics">New Topics</a>
-    <a href="https://linuxhero.tk/#about">About</a>
-    <a href="https://linuxhero.tk/#contact">Contact</a>
+    <a href="http://linuxhero.tk/#Topics">New Topics</a>
+    <a href="http://linuxhero.tk/#about">About</a>
+    <a href="http://linuxhero.tk/#contact">Contact</a>
   </div>
 
 <!-------------Top Menu End------------->
@@ -192,8 +192,86 @@ Memory Bottlenecks</span></h5>
 <br>- Stop the services that are not needed.
 <br>- Add memory.</span></h5> 
 
+<h5><span class="w3-code w3-red">
+Tuning the vm subsystem:-</span></h5> 
+<p>Tuning the memory subsystem is a challenging task that requires constant monitoring to
+ensure that changes do not negatively affect other subsystems in the server. If you do choose
+to modify the virtual memory parameters (in /proc/sys/vm), we recommend that you change
+only one parameter at a time and monitor how the server performs.<p>
+
+<p>Remember that most applications under Linux do not write directly to the disk; they write to
+the file system cache maintained by the virtual memory manager that will eventually flush out
+the data. When using an IBM ServeRAID controller or an IBM TotalStorage disk subsystem,
+you should try to the decrease the number of flushes, effectively increasing the I/O stream
+caused by each flush. The high-performance disk controller can handle the larger I/O stream
+more efficiently than multiple small ones.<p>
+<br>
+
+<h5><span class="w3-code w3-red">Setting kernel swap and pdflush behavior:-</span></h5> 
+
+<p>The parameter stored in /proc/sys/vm/swappiness can be used to define how
+aggressively memory pages are swapped to disk. An introduction to the Linux virtual
+memory manager and the general use of swap space in Linux is discussed in “Page frame
+reclaiming” on page 14. It states that Linux moves memory pages that have not been
+accessed for some time to the swap space even if there is enough free memory available.
+By changing the percentage in /proc/sys/vm/swappiness you can control that behavior,
+depending on the system configuration. If swapping is not desired,
+/proc/sys/vm/swappiness should have low values. Systems with memory constraints that
+run batch jobs (processes that sleep for a long time) might benefit from an aggressive
+swapping behavior. To change swapping behavior, use either echo or sysctl as shown below.<p>
+
+
+<h5><span class="w3-code w3-black">#Changing swappiness behavior
+<br>[root@server ~]# sysctl -w vm.swappiness=100</span></h5> 
+
+<p>Especially for fast disk subsystems, it might also be desirable to cause large flushes of
+dirty memory pages. The value stored in /proc/sys/vm/dirty_background_ratio defines
+at what percentage of main memory the pdflush daemon should write data out to the disk.
+If larger flushes are desired then increasing the default value of 10% to a larger value will
+cause less frequent flushes. As in the example above, the value can be changed as shown
+below.<p>
+
+<h5><span class="w3-code w3-black">Increasing the wake up time of pdflush
+<br>[root@server ~]# sysctl -w vm.dirty_background_ratio=25
+</span></h5>
 
 <br>
+
+<p>Another related setting in the virtual memory subsystem is the ratio at which dirty pages
+created by application disk writes will be flushed out to disk. The writes to the file system will not be written instantly
+but rather written in the page cache and flushed out to the disk subsystem at a later stage.
+Using the parameter stored in /proc/sys/vm/dirty_ratio the system administrator can
+define at what level the actual disk writes will take place. The value stored in dirty_ratio
+is a percentage of main memory. A value of 10 would mean that data will be written into
+system memory until the file system cache has a size of 10% of the server’s RAM. As in
+the previous two examples, the ratio at which dirty pages are written to disk can be altered
+as follows to a setting of 20% of the system memory:<p>
+
+<h5><span class="w3-code w3-black">Altering the dirty ratio
+<br>[root@server ~]# sysctl -w vm.dirty_ratio=20
+</span></h5>
+<br>
+<h5><span class="w3-code w3-red">Swap partition:-</span></h5>
+
+<p>The swap device is used when physical RAM is fully in use and the system needs additional
+memory. Linux also uses swap space to page memory areas to disk that have not been
+accessed for a significant amount of time. When no free memory is available on the system, it
+begins paging the least used data from memory to the swap areas on the disks. The initial
+swap partition is created during the Linux installation process with current guidelines stating
+that the size of the swap partition should be two times physical RAM. Linux kernels 2.4 and
+beyond support swap sizes up to 24 GB per partition with an 8 TB theoretical maximum for
+32-bit systems. Swap partitions should reside on separate disks.<p>
+
+<p> If more memory is added to the server after the initial installation, additional swap space must
+be configured. There are two ways to configure additional swap space after the initial install:<p>
+
+<p>1. A free partition on the disk can be created as a swap partition. This can be difficult if the
+disk subsystem has no free space available. In that case, a swap file can be created.<p>
+
+<p>2. If there is a choice, the preferred option is to create additional swap partitions. There is a
+performance benefit because I/O to the swap partitions bypasses the file system and all of
+the overhead involved in writing to a file.<p>
+
 <h5><span class="w3-code w3-red">How to test all above tips at home for Memory issue.</span></h5>
 
 <h5><span class="w3-code w3-red">"stress" tool</span></h5>
@@ -219,10 +297,7 @@ Memory Bottlenecks</span></h5>
 <br>[root@server ~]# uptime
 <br>
 </span></h5>
-<h5><span class="w3-code w3-red">Now try above tuning option to reduce some load.
-</span></h5>
-<h5><span class="w3-code w3-red">
-AGAIN, DO NOT TRY ANY TUNING OPTIONS IN PRODUCTION UNTILL YOU ARE FULL AWARE.</span></h5>
+<h5><span class="w3-code w3-black">Now try above tuning option to reduce some load.</span></h5>
 
 
 <!-- Contact/Area Container -->
