--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ body, html {
       <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
       <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
         <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
+       <a href="https://linuxhero.tk/cpubottlenecks/">DISK Bottlenecks</a>
       <a href="#">Link 3</a>
      </div>
     </div>
