--- a/diskbottlenecks/index.html
+++ b/diskbottlenecks/index.html
@@ -99,7 +99,7 @@ body, html {
      </button>
      <div class="dropdown-content">
       <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
-      <a href="https://linuxhero.tk/cpubottlenecks/">DISK Bottlenecks</a>
+      <a href="https://linuxhero.tk/diskbottlenecks/">DISK Bottlenecks</a>
       <a href="https://linuxhero.tk/
 diskbottlenecks
 /">CPU Bottlenecks</a>
