--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@ body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
   }
+  
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/linux3.jpg");
+  min-height: 75%;
+}
+
 .navbar {
   overflow: hidden;
-  background-color: #000000;
+  background-color: #333;
 }
 
 .navbar a {
@@ -64,7 +72,7 @@ body, html {
 }
 
 .dropdown-content a:hover {
-  background-color: #808080;
+  background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
@@ -75,22 +83,15 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="http://linuxhero.tk/#home">Home</a>
+  <a href="#home">Home</a>
    <div class="dropdown">
      <button class="dropbtn">Linux 
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
-       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
-       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
-       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
-       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
-       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
-       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
-       <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
-       <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
-      
+      <a href="http://linuxhero.tk/webapp/">What is Linux?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
+      <a href="#">Link 3</a>
      </div>
     </div> 
    <div class="dropdown">
@@ -98,12 +99,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
-      <a href="https://linuxhero.tk/diskbottlenecks/">DISK Bottlenecks</a>
-      <a href="https://linuxhero.tk/networkbottlenecsk/">Network Bottlenecks</a>
-      <a href="https://linuxhero.tk/
-diskbottlenecks
-/">CPU Bottlenecks</a>
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
      </div>
@@ -113,7 +109,7 @@ diskbottlenecks
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-     <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
@@ -128,62 +124,51 @@ diskbottlenecks
       <a href="#">Link 3</a>
     </div>
   </div>
-    <a href="http://linuxhero.tk/#Topics">New Topics</a>
-    <a href="http://linuxhero.tk/#about">About</a>
-    <a href="http://linuxhero.tk/#contact">Contact</a>
+    <a href="#Topics">New Topics</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact Us</a>
   </div>
 
-<!-------------Top Menu End------------->
 
+<!-- Header with image -->
+<header class="bgimg w3-display-container w3-grayscale-min" id="Home">
+  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
+  </div>
+  <div class="w3-display-bottomright w3-center w3-padding-large">
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Infront Of HDFC Bank, Civil line, Bijnor-246701,  ContactNo: 9837347759 </marquee>
+  </div>
+</header>
 
 <!-- Add a background color and large text to the whole page -->
-<div class="w3-orange w3-scale w3-large">
-     <img src="/programming.gif" alt="Computer man" style="width:100px;height:100px;">
-<!-- Content -->
-<div style="max-width:1200px">
+<div class="w3-sand w3-grayscale w3-large">
+  
+  
+  <div class="w3-container" style="padding-bottom:32px;" id="Topics">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">New Topics Added</span></h5>
+    <li><a href="https://www.google.com/maps/place/New++Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
+   
+<!-- About Container -->
+<div class="w3-container" id="about">
+  <div class="w3-content" style="max-width:700px">
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
+    <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
+    <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
+    <div class="w3-panel w3-leftbar w3-light-grey">
+      <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
+    </div>
+  </div>
+</div>
 
-  <div class="w3-content" style="max-width:1000px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-black">	
-Network Bottlenecks</span></h5>
- <br>
-  <p>A performance problem in the network subsystem can be the cause of many problems, such as a kernel panic. To analyze these anomalies to detect network bottlenecks, each Linux distribution includes traffic analyzers.<p>
-<br>
-<h5><span class="w3-code w3-red">Finding network bottlenecks</span></h5>
-<p>There are a many common pre-checks to be done before diving into troubleshooting a glitch in network. Make sure that network drivers/firmware of system are updated. Network interface speed is matching with router/gateway speed, as we know that overall network speed would operate on slowest network component in an infrastructure.<p>
-<br>
-<p>Common Linux native network commands such as "netstat", "ip", "ethtool", "ss" (socket statistics) etc., could be used to understand network statistics and infrastructure. The "netstat" can provide details about open network connections and stack statistics. This command would basically pull data from /proc/net/[dev|tcp|unix] and other files stored under "/proc/net/" directory.<p>
-<br>
-
-
-<h5><span class="w3-code w3-red">The "/proc/net/dev" file would provide overall network packets received/sent/dropped/collisions etc,. This file "/proc/net/tcp" is another useful source of information which provides details about TCP socket information.
- </span></h5>
-
-<br>
-<h5><span class="w3-code w3-red">The "ethtool" command would be the ideal one when someone wish to see packet drops/loss at hardware level. Need to look out for "errors|drops|discards|fail|missed" etc, while analyzing the data (example: ethtool -S eth0|egrep -i "errors|drops|discards|fail|missed"). This command could also be used to identify network card driver/firmware version. Even "ip -s link" would be a good option to know about drops/errors/collisions etc.</span></h5>
-
-<br>
-<h5><span class="w3-code w3-red">Performance tuning options</span></h5>
-
-<p><b>These steps illustrate what you should do to solve problems related to network bottlenecks:-<b><p>
-
-
-<h5><span class="w3-code w3-red">- Ensure that the network card configuration matches router and switch configurations (for example, frame size).
-<br>- Modify how your subnets are organized.
-<br>- Use faster network cards.
-<br>- Tune the appropriate IPV4 TCP kernel parameters. Some security-related parameters can also improve performance.
-<br>- If possible, change network cards and recheck performance.
-<br>- Add network cards and bind them together to form an adapter team, if possible.
-    </span></h5>
- <br>
-    
-
+<!-- Menu Container -->
 
 
 <!-- Contact/Area Container -->
-
-<div class="w3-container" id="contact">
-    <h2>Please email me if you face any issue.</h2>
-    <form action="mailto:Allishah2490@gmail.com" method="get" enctype="text/plain">
+ 
+    <h2> Give Feedback About Our Products.</h2>
+    <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
       <p><strong>Comments:
@@ -191,7 +176,7 @@ Network Bottlenecks</span></h5>
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:allishah2490@gmail.com" 
+        <form action="mailto:Mdsulemanroayl23@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
