--- a/index.html
+++ b/index.html
@@ -89,9 +89,16 @@ body, html {
         <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is Linux?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
-      <a href="#">Link 3</a>
+        <a href="https://linuxhero.tk/linuxinfo/">Linux Introduction</a>
+       <a href="https://linuxhero.tk/linuxdistros/">Linux Distributions</a>
+       <a href="https://linuxhero.tk/linuxcommands/">Linux Commands</a>
+       <a href="https://linuxhero.tk/ntp/">Configure NTP</a>
+       <a href="https://linuxhero.tk/ssh/">Configure SSH</a>
+       <a href="https://linuxhero.tk/nfs/">Configure NFS</a>
+       <a href="https://linuxhero.tk/iscsi/">Configure iSCSI Storage</a>  
+        <a href="https://linuxhero.tk/dhcp/">Configure Dnsmasq</a>
+       <a href="https://linuxhero.tk/ftp/">Configure FTP Server</a>
+       <a href="https://linuxhero.tk/lvm/">Configure LVM</a>
      </div>
     </div> 
    <div class="dropdown">
@@ -99,8 +106,11 @@ body, html {
        <i class="fa fa-caret-down"></i>
      </button>
      <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="https://linuxhero.tk/Analyzebottlenecks/">Steps To Analyze Linux Performance Bottlenecks</a>
+      <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
+        <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
+       <a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a>
+       <a href="https://linuxhero.tk/networkbottlenecks/">Network Bottlenecks</a>
       <a href="#">Link 3</a>
      </div>
     </div>
@@ -109,7 +119,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://linuxhero.tk/webapp/">What is devops?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
@@ -133,11 +143,10 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">"The Linux philosophy is 'Laugh in the face of danger'. Oops. Wrong One. 'Do it yourself'. Yes, that's it". ~ Linus Torvalds</marquee>   
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Infront Of HDFC Bank, Civil line, Bijnor-246701,  ContactNo: 9837347759 </marquee>
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Email me if you want any particular topic.</marquee>
   </div>
 </header>
 
@@ -154,20 +163,27 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">About Me</span></h5>
+    <img src="/me.jpg" style="width:50%;max-width:1000px" class="w3-margin-top">
+      <body>
+   <div class="list-group">
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:blue" href="https://www.facebook.com"></a>
+    </div>
+     </body>
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
     <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
-    </div>
   </div>
-</div>
+ </div>
+ </div>
 
 <!-- Menu Container -->
 
 
 <!-- Contact/Area Container -->
  
-    <h2> Give Feedback About Our Products.</h2>
+<div class="w3-container" id="contact">
+    <h2>Please email me if you face any issue.</h2>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
@@ -176,7 +192,7 @@ body, html {
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:Mdsulemanroayl23@gmail.com" 
+        <form action="mailto:Allishah2490@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
@@ -189,8 +205,14 @@ body, html {
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
+<footer class="w3-center w3-black w3-padding-48 w3-large">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<body>
+   <div class="list-group">
+     <a class="fa fa-linkedin-square" style="font-size:48px;color:white" href="https://www.facebook.com"></a>
+    </div>
+   </body>
+  
 </footer>
 
 <script>
@@ -203,12 +225,14 @@ function openMenu(evt, menuName) {
   }
   tablinks = document.getElementsByClassName("tablink");
   for (i = 0; i < x.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+    tablinks[i].className = tablinks[i].className.replace(" w3-black", "");
   }
   document.getElementById(menuName).style.display = "block";
-  evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+  evt.currentTarget.firstElementChild.className += " w3-black";
 }
 document.getElementById("myLink").click();
 </script>
+  <script async type="text/javascript" src="https://userlike-cdn-widgets.s3-eu-west-1.amazonaws.com/d73a0ca9d9021011823acd38988ac62dbf6728e50c7d390a5bdaa97fbca53a7d.js"></script>
+  
 </body>
 </html>
