--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body, html {
       <a href="https://linuxhero.tk/cpubottlenecks/">CPU Bottlenecks</a>
         <a href="https://linuxhero.tk/memorybottlenecks/">Memory Bottlenecks</a>
        <a href="https://linuxhero.tk/diskbottlenecks/">Disk Bottlenecks</a>
-       <a href="https://linuxhero.tk/networkbottlenecks/">Network Bottlenecks</a>
+       <a href="https://linuxhero.tk/networkbottlenecsk/">Network Bottlenecks</a>
       <a href="#">Link 3</a>
      </div>
     </div>
